--- a/static/index.css
+++ b/static/index.css
@@ -2,7 +2,7 @@ html,body{
     margin: 0px;
     width: 100%;
     height:100%;
-    /*background-color: rebeccapurple;*/
+    background-color: rebeccapurple;
     display: flex;
     }
 #root{
