--- a/app/Containers/Admin/Layout/Layout.scss
+++ b/app/Containers/Admin/Layout/Layout.scss
@@ -1,5 +1,51 @@
 .LayoutRoot {
+    display: flex;
+    flex-direction: column;
+    .LayoutTop {
+        flex: 2;
+        height: 50px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .TopLogo{
+            img{
+                width: 100px;
+                height: 50px;
+            }
+        }
+        .TopUser{
+            display: flex;
+            div img{
+                width: 22px;
+                height: 22px;
+            }
+            .TopSetting{
+                width: 50px;
+            }
+
+        }
+
+    }
     .LayoutContent {
-        flex-direction: column;
+        flex: 8;
+        // height: 1200px;
+        display: flex;
+        .ContentLeft {
+            flex: 1;
+            display: inline;
+            .LeftCatagoryDefault{
+                background-color:#333333;
+                color: white;
+            }
+            div{
+                height: 50px;
+                font-size: 24px;
+                color: #333333;
+                text-align: center;
+            }
+        }
+        .ContentRight{
+            flex: 9;
+        }
     }
 }
