--- a/app/Components/IconContentButton/IconContentButton.scss
+++ b/app/Components/IconContentButton/IconContentButton.scss
@@ -4,21 +4,20 @@
     width: 280px;
     height: 100px;
     display: flex;
+    overflow:auto;
     .Icon {
         display: flex;
         width: 100px;
         height: 100px;
         align-items: center;
         justify-content: center;
-        background-color: #ff6c60;
-        border-radius: 5px;
+        
     }
     .Content {
         width: 180px;
         display: inline-block;
-        align-items: center;
-        justify-content: center;
+        align-self: center;
         color: #c6cad6;
-
+        text-align: center;
     }
 }
