--- a/app/Containers/Admin/Layout/Layout.scss
+++ b/app/Containers/Admin/Layout/Layout.scss
@@ -2,29 +2,16 @@
     display: flex;
     flex-direction: column;
     .LayoutTop {
-        flex: 2;
         height: 64px;
         display: flex;
-        justify-content: space-between;
+        // justify-content: space-between;
         align-items: center;
-        .TopLogo{
-            img{
-                width: 100px;
-                height: 64px;
-            }
-        }
-        .TopUser{
+        .AppBarContent {
             display: flex;
-            div img{
-                width: 22px;
-                height: 22px;
-            }
-            .TopSetting{
-                width: 50px;
-            }
-
+            flex-direction: row;
+            width: 100%;
+            justify-content: space-between
         }
-
     }
     .LayoutContent {
         // flex: 8;
@@ -32,8 +19,8 @@
         display: flex;
         .ContentLeft {
             // flex: 1;
-            display: inline;
-            width: 300px;
+            // display: inline;
+            width: 210px;
         }
         .ContentRight{
             // flex: 9;
